--- a/app/commands/files.html
+++ b/app/commands/files.html
@@ -28,30 +28,30 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active" class="dropdown">
+          <li class="active" data-cy="files" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Commands <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/commands/querying">Querying</a></li>
-              <li><a href="/commands/traversal">Traversal</a></li>
-              <li><a href="/commands/actions">Actions</a></li>
-              <li><a href="/commands/window">Window</a></li>
-              <li><a href="/commands/viewport">Viewport</a></li>
-              <li><a href="/commands/location">Location</a></li>
-              <li><a href="/commands/navigation">Navigation</a></li>
-              <li><a href="/commands/assertions">Assertions</a></li>
-              <li><a href="/commands/misc">Misc</a></li>
-              <li><a href="/commands/connectors">Connectors</a></li>
-              <li><a href="/commands/aliasing">Aliasing</a></li>
-              <li><a href="/commands/waiting">Waiting</a></li>
-              <li><a href="/commands/network-requests">Network Requests</a></li>
-              <li class="active"><a href="/commands/files">Files</a></li>
-              <li><a href="/commands/local-storage">Local Storage</a></li>
-              <li><a href="/commands/cookies">Cookies</a></li>
-              <li><a href="/commands/spies-stubs-clocks">Spies, Stubs &amp; Clocks</a></li>
+              <li><a href="/commands/querying" data-cy="quering">Querying</a></li>
+              <li><a href="/commands/traversal" data-cy="">Traversal</a></li>
+              <li><a href="/commands/actions" data-cy="actions">Actions</a></li>
+              <li><a href="/commands/window" data-cy="window">Window</a></li>
+              <li><a href="/commands/viewport" data-cy="viewport">Viewport</a></li>
+              <li><a href="/commands/location" data-cy="location">Location</a></li>
+              <li><a href="/commands/navigation" data-cy="navigation">Navigation</a></li>
+              <li><a href="/commands/assertions" data-cy="assertions">Assertions</a></li>
+              <li><a href="/commands/misc" data-cy="misc">Misc</a></li>
+              <li><a href="/commands/connectors" data-cy="connectors">Connectors</a></li>
+              <li><a href="/commands/aliasing" data-cy="aliasing">Aliasing</a></li>
+              <li><a href="/commands/waiting" data-cy="waiting">Waiting</a></li>
+              <li><a href="/commands/network-requests" data-cy="network-requests">Network Requests</a></li>
+              <li class="active"><a href="/commands/files" data-cy="files">Files</a></li>
+              <li><a href="/commands/local-storage" data-cy="local-storage">Local Storage</a></li>
+              <li><a href="/commands/cookies" data-cy="cookies">Cookies</a></li>
+              <li><a href="/commands/spies-stubs-clocks" data-cy="spies-stubs-clocks">Spies, Stubs &amp; Clocks</a></li>
             </ul>
           </li>
-          <li><a href="/utilities">Utilities</a></li>
-          <li><a href="/cypress-api">Cypress API</a></li>
+          <li><a href="/utilities" data-cy="utilities">Utilities</a></li>
+          <li><a href="/cypress-api" data-cy="cypress-api">Cypress API</a></li>
         </ul>
         <ul class="nav navbar-nav pull-right">
           <li><a href="https://github.com/cypress-io/cypress-example-kitchensink">GitHub</a></li>
