add hw locators_another branch

--- a/app/cypress-api.html
+++ b/app/cypress-api.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Commands <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/commands/querying" data-cy="quering">Querying</a></li>
+              <li><a href="/commands/querying"   data-cy="quering">Querying</a></li>
               <li><a href="/commands/traversal" data-cy="traversal">Traversal</a></li>
               <li><a href="/commands/actions" data-cy="actions">Actions</a></li>
               <li><a href="/commands/window" data-cy="window">Window</a></li>
@@ -51,7 +51,7 @@
             </ul>
           </li>
           <li><a href="/utilities" data-cy="utilities">Utilities</a></li>
-          <li class="active"><a href="/cypress-api" data-cy="cypress-api">Cypress API</a></li>
+          <li class="active"><a href="/cypress-api" data-cy="cypress-apil">Cypress API</a></li>
         </ul>
         <ul class="nav navbar-nav pull-right">
           <li><a href="https://github.com/cypress-io/cypress-example-kitchensink">GitHub</a></li>
